<resources>
    <string name="app_name">BookReview</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_to_register">Not a member?</string>
    <string name="btn_to_login">Already registered. Login!</string>


    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="title_activity_register">Register</string>
    <string name="trending_search">Trending Search</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="myprofile">MyProfile</string>
    <string name="home">HOME</string>
    <string name="book_detail">BOOK DETAIL</string>
    <string name="title_1">TITLE:</string>
    <string name="author_1">AUTHOR:</string>
    <string name="review">REVIEW</string>
    <string name="category">CATEGORY</string>
    <string name="action_register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in_successful">Sign In Successful</string>
    <string name="error_incorrect_email_or_password">Incorrect email or password</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="email_already_exists">Email Already Exists</string>
    <string name="error_field_required">Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_name">Invalid Name</string>
    <string name="action_sign_in">Sign In</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="must_implement_on_fragment_interaction_listener">must implement OnFragmentInteractionListener</string>
    <string name="search">SEARCH</string>
    <string name="library">LIBRARY</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_main">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_link_to_register">Register</string>

</resources>