<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.example.bookreview.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".view.activity.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_login_imageView"
                    android:layout_width="272dp"
                    android:layout_height="279dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/bookreview" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/activity_login_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={loginViewModel.email}"
                        app:errorText="@{loginViewModel.emailError}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/activity_login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={loginViewModel.password}"
                        app:errorText="@{loginViewModel.passwordError}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/activity_login_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_button"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{loginViewModel::attemptLogin}"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <!-- Login progress -->
                <ProgressBar
                    android:id="@+id/activity_login_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="@{loginViewModel.progressIsShown ? View.VISIBLE : View.GONE}" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</layout>