<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="registerViewModel"
            type="com.example.bookreview.viewmodel.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".view.activity.RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">



                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/activity_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={registerViewModel.email}"
                        app:errorText="@{registerViewModel.emailError}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/activity_register_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_register"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={registerViewModel.password}"
                        app:errorText="@{registerViewModel.passwordError}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/activity_register_first_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={registerViewModel.firstName}"
                        app:errorText="@{registerViewModel.firstNameError}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/activity_register_last_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={registerViewModel.lastName}"
                        app:errorText="@{registerViewModel.lastNameError}" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/activity_register_register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_button"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{registerViewModel::attemptRegister}"
                    android:text="@string/action_register"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <!-- Login progress -->
                <ProgressBar
                    android:id="@+id/activity_register_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="@{registerViewModel.progressIsShown ? View.VISIBLE : View.GONE}" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>