<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/search"
        android:background="?android:attr/windowBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/search_trending"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_search"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:columnCount="3"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/T1"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/T2"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/T3"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>

            </GridLayout>
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:columnCount="3"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/T4"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/T5"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/T6"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />
    </LinearLayout>

</LinearLayout>